Updated Swagger, tests, and controler.
